[tool.poetry]
name = "commonplace"
version = "0.1.0"
description = ""
authors = ["Jarosław Orzeł"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.23.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
edgedb = "^1.2.0"
jinja2 = "^3.1.2"
python-dateutil = "^2.8.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
flake8-bugbear = "^22.12.6"
isort = "^5.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
